Optimizes state management to separate state records from month (selected by user) records (LH-b73c). - Fixes overflow on record list. - Shares month records across Calendar, Chart, and Record List components to render data based on user selection. - Updates date utils to include 'Yesterday' as a result when it corresponds on relative date usage. - Optimizes chart and record list styles related to responsive web design.

--- a/src/components/Chart/chart.css
+++ b/src/components/Chart/chart.css
@@ -3,5 +3,4 @@
   max-width: 400px;
   max-height: 400px;
   margin: 0 auto;
-  display: inline-block;
 }
