--- a/src/components/Layout/section.css
+++ b/src/components/Layout/section.css
@@ -1,15 +1,8 @@
-.section {
-  margin: 40px 0;
-}
-
-.section_mb-60 {
-  margin-bottom: 60px;
-}
-
-@media screen and (min-width: 1000px) {
+@media screen and (min-width: 768px) {
   .section_flex {
     margin: 0 auto;
     display: flex;
     justify-content: center;
+    align-items: start;
   }
 }
