--- a/src/components/Record/recordList.css
+++ b/src/components/Record/recordList.css
@@ -4,6 +4,11 @@
   margin: 40px auto 0;
 }
 
+.card-container {
+  max-height: 400px;
+  overflow-y: auto;
+}
+
 .record-card {
   height: 32px;
   width: 300px;
